plugins {
  id 'java'
}

group 'io.kirill'
version '1.0'

sourceCompatibility = 11

repositories {
  mavenCentral()
}

dependencies {
  compile 'org.apache.kafka:kafka-clients:2.3.1'
  compile 'org.apache.kafka:kafka-streams:2.3.1'
  compile 'org.slf4j:slf4j-simple:1.7.29'
  compile 'com.twitter:hbc-core:2.2.0'
  compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.2.0'
  compileOnly 'org.projectlombok:lombok:1.18.10'
  annotationProcessor 'org.projectlombok:lombok:1.18.10'

  testCompile 'org.assertj:assertj-core:3.12.2'
  testCompile 'org.junit.jupiter:junit-jupiter:5.4.1'
}
